# llm-cli-tools

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_CN.md  pyproject.toml
llm_cli_tools/: __init__.py
llm_cli_tools/cli/: __init__.py  llm_cli_unified.py  prompts.py
llm_cli_tools/data/: __init__.py  build_dpo.py  clean_failed_data.py  convert2sftdata.py  merge_jsonl.py
llm_cli_tools/eval/: __init__.py  compare_models_metrics.py  llm_eval.py
llm_cli_tools/utils/: __init__.py  file_utils.py  nested_utils.py  normalize.py
