[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-cli-tools"
version = "0.1.0"
description = "A comprehensive toolkit for LLM inference, evaluation, and data processing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Deyou Jiang", email = "jiangdeyou@inspur.com"}
]
keywords = ["llm", "cli", "evaluation", "inference", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
llm-cli = "llm_cli_tools.cli.llm_cli_unified:main"
llm-eval = "llm_cli_tools.eval.llm_eval:main"
llm-merge = "llm_cli_tools.data.merge_jsonl:main"
llm-convert = "llm_cli_tools.data.convert2sftdata:main"
llm-dpo = "llm_cli_tools.data.build_dpo:main"
llm-compare = "llm_cli_tools.eval.compare_models_metrics:main"
llm-clean = "llm_cli_tools.data.clean_failed_data:main"

[project.urls]
Homepage = "https://github.com/aexcellent/llm-cli-tools"
Documentation = "https://github.com/aexcellent/llm-cli-tools#readme"
Repository = "https://github.com/aexcellent/llm-cli-tools"
Issues = "https://github.com/aexcellent/llm-cli-tools/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_cli_tools*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
